# net-guardian

./: .gitignore  Network-Packet-Anomaly-Detection.ipynb  README.md  requirements.txt  setup.cfg
src/NetGuardian/: app.py  constants.py  dataset_reader.py  dataset_selection_page.glade  dataset_selection_page.py  features_selection_page.glade  features_selection_page.py  loading_page.glade  loading_page.py  main.py  main_page.glade  main_page.py  model_client.py  model_selection_page.glade  model_selection_page.py  model_template.glade  model_template.py  page_template.glade  page_template.py  result_page.glade  result_page.py
