[metadata]
name = NetGuardian
version = 0.0.1

[options]
packages = find:
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
gui_scripts =
    NetGuardianGUI = NetGuardian.main:main

[options.package_data]
NetGuardian =
    main_page.glade
    dataset_selection_page.glade
    features_selection_page.glade
    page_template.glade
    
